fixing startup of new builder methods